@@ -1,5 +1,10 @@
 2008-04-07  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
+    * src/ccm-screen.c: Fix window stacking in DESKTOP layer and window in
+                        NORMAL layer.
+
+2008-04-07  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
     * plugins/shadow/ccm-shadow.c:
     * src/ccm-screen.c:
     * src/ccm-screen.h:
